--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href="rde11/cssincorporado.html" target="_blank">CSS incorporado</a>
         <a href="rde11/CSS_Inline.html" target="_blank">CSS Inline</a>
         <a href="rde12/CSS_BoxModel.html" target="_blank">Box Model</a>
+        <a href="rde15/index.html" target="_blank">Layout em css</a>
 
         <h2>JavaScript</h2>
         <a href="rde16/JS_Ex01.html" target="_blank">Excercio 01</a>
